nog maar eens aangepast

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
     <footer>
-      <a href="www.google.be"> Google</a>
+      <a href="https://sheltered-caverns-81167.herokuapp.com/"> Heroku</a>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="/js/isotope.js"></script>
