--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 <html lang="nl-BE" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Oefening 1 test</title>
+    <title>CnaepkensYoeri Opdr 3</title>
 
     <link rel="stylesheet" href="/css/master.css">
   </head>
